--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
      <nav class="home background hi">
    <ul class="name" id="nav">
-    <div class="logo"><img src="img/Prince.jpg" alt="logo img" /></div>
+    <div class="logo"><img src="Img/Prince.jpg" alt="logo img" /></div>
   <li><a href="index.html">home</a></li>
   <li><a href="about.html">about</a></li>
   <li><a href="services.html">services</a></li>
