--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>my wabsite</title>
+  <title>My Website</title>
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,10 +14,10 @@
      <nav class="home background hi">
    <ul class="name" id="nav">
     <div class="logo"><img src="Img/Prince.jpg" alt="logo img" /></div>
-  <li><a href="index.html">home</a></li>
-  <li><a href="about.html">about</a></li>
-  <li><a href="services.html">services</a></li>
-  <li><a href="download.html">downlode</a></li>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="about.html">About</a></li>
+  <li><a href="services.html">Services</a></li>
+  <li><a href="download.html">Downlode</a></li>
    </ul>
     <div class="right">
       <div class="barger" id="ber">
@@ -28,22 +28,22 @@
     </div>
      </nav>
         <section class="background" style="font-family: 'Roboto Condensed', sans-serif;">
-       <p class="title"><b>home</b></p>
+       <p class="title"><b>Home</b></p>
        <div class="pp">
         <div class="firstshalf" style=" margin-top: 90px; margin-left: 15px;">
-      <p class="font"><b>walcom to prince gohel wabsite.</b></p>
-      <p class="fohis">this wabsite is developed by prince fist log in </p><br />
+      <p class="font"><b>Welcome To Prince Gohel Website.</b></p>
+      <p class="fohis">This Website is developed by prince, First Log in </p><br />
     <a href="Log in .html" class="login">&nbsp;&nbsp;log in &nbsp;</a>  
     </div>
     </div>
  </section>
 <footer style="border-top:1px solid #FFFFFF;">
  <div class="condition" style="text-align: center;">
-    <a href="#" class="terms">terms & condition</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-     <a href="#"class="terms">cookies</a>
+    <a href="#" class="terms">Terms & Condition</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+     <a href="#"class="terms">Cookies</a>
 <!--<a href="princewabsite.zip" class="bottom"download>download &nbsp;wabsite &nbsp;zip</a>-->
 <!--style="margin-left:250px;"> style="margin-left:100px;"-->
-      <p class="bottom">copyright&nbsp; &copy; 2023 &nbsp;princewab.cf</p>
+      <p class="bottom">Copyright&nbsp; &copy; 2023 &nbsp;Princewab.cf</p>
     </div>
     </footer>
   <script src="js/index.js"></script>
