--- a/Log in .html
+++ b/Log in .html
@@ -12,7 +12,7 @@
 <body>
 <nav class="home background">
   <ul class="name">
-    &nbsp;&nbsp;&nbsp;<div class="logo"><img src="Img/Prince.jpg" alt="" /></div>
+    &nbsp;&nbsp;&nbsp;<div class="logo"><img src="Img/Prince.jpg" alt="logo img" /></div>
     <li><a href="index.html">home</a></li>
     <li><a href="about.html">about</a></li>
     <li><a href="services.html">services</a></li>
