Update Log in .html

--- a/Log in .html
+++ b/Log in .html
@@ -13,17 +13,17 @@
 <nav class="home background">
   <ul class="name">
     &nbsp;&nbsp;&nbsp;<div class="logo"><img src="Img/Prince.jpg" alt="logo img" /></div>
-    <li><a href="index.html">home</a></li>
-    <li><a href="about.html">about</a></li>
-    <li><a href="services.html">services</a></li>
-    <li><a href="download.html">downlode</a></li>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="services.html">Services</a></li>
+    <li><a href="download.html">Downlode</a></li>
   </ul>
 </nav>
   
     <section class="background bac">
         <div class="text-box">
           <form action="index.html">
-    <h1 class="h1text">&nbsp;&nbsp;log in
+    <h1 class="h1text">&nbsp;&nbsp;Log in
     &nbsp;&nbsp;</h1>
     
     <input type="text"id="username" class="log_in_text-box"
@@ -34,22 +34,20 @@
      placeholder="&nbsp;enter your password"/>
      <br /><br />
   <input type="submit" name="log in"value="log in" class="log-button"/><br /><br />
-  <a href="" class="a1-log">don't have any
-    account</a>
+  <div>No account ?</div>
+  <a href="" class="a1-log">Create One!</a>
        </div>
         </form>
     </section>
   <hr />
   <footer style="border-top:1px solid #FFFFFF;">
     <div class="condition" style="text-align: center;">
-       <a href="#" class="terms">terms & condition</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="#"class="terms">cookies</a>
-   <!--<a href="princewabsite.zip" class="bottom"download>download &nbsp;wabsite &nbsp;zip</a>-->
-   <!--style="margin-left:250px;"> style="margin-left:100px;"-->
-       <p class="bottom">copyright&nbsp; &copy; 2023 &nbsp;princewab.cf</p>
-       </div>
-       </footer>
- </div>
+        <a href="#" class="terms">Terms & Condition</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+     <a href="#"class="terms">Cookies</a>
+<!--<a href="princewabsite.zip" class="bottom"download>download &nbsp;wabsite &nbsp;zip</a>-->
+<!--style="margin-left:250px;"> style="margin-left:100px;"-->
+      <p class="bottom">Copyright&nbsp; &copy; 2023 &nbsp;Princewab.cf</p>
+    </div>
+    </footer>
 </body>
-
 </html>
