--- a/Log in .html
+++ b/Log in .html
@@ -34,8 +34,7 @@
      placeholder="&nbsp;enter your password"/>
      <br /><br />
   <input type="submit" name="log in"value="log in" class="log-button"/><br /><br />
-  <div>No account ?</div>
-  <a href="" class="a1-log">Create One!</a>
+    <div> <Div>No account ?</Div> <a href="" class="a1-log"> Create One! </a> </div>
        </div>
         </form>
     </section>
