Update Log in .html

--- a/Log in .html
+++ b/Log in .html
@@ -34,7 +34,7 @@
      placeholder="&nbsp;enter your password"/>
      <br /><br />
   <input type="submit" name="log in"value="log in" class="log-button"/><br /><br />
-    <div> <Div>No account ?</Div> <a href="" class="a1-log"> Create One! </a> </div>
+    <div> <Div>No account ?</Div> <a href="#"> Create One! </a> </div>
        </div>
         </form>
     </section>
