--- a/about.html
+++ b/about.html
@@ -9,36 +9,32 @@
 <body>
   <nav class="home background hi">
     <ul class="name" id="nav">
-        <div class="logo"><img src="Img/Prince.jpg" alt="logo img" /></div>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="services.html">Services</a></li>
-        <li><a href="download.html">Downlode</a></li>
+      <div class="logo"><img src="Img/Prince.jpg" alt="logo img" /></div>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="download.html">Downlode</a></li>
     </ul>
-     <div class="right">
-       <div class="barger" id="ber">
-           <div class="hamber"></div>
-           <div class="hamber"></div>
-           <div class="hamber"></div>
-        </div>
-    </div>
-    </nav>
-    <section class="background">
-      <div class="serv">
-        <h1 class="title">About</h1>
-        <p class="about_text">This website is Developed by Prince</p>
+    <div class="right">
+      <div class="barger" id="ber">
+        <div class="hamber"></div>
+        <div class="hamber"></div>
+        <div class="hamber"></div>
       </div>
-    </section>
- <hr />
- <hr />
- <footer style="border-top:1px solid #FFFFFF;">
-  <div class="condition" style="text-align: center;">
-    <a href="#" class="terms">Terms & Condition</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-     <a href="#"class="terms">Cookies</a>
-<!--<a href="princewabsite.zip" class="bottom"download>download &nbsp;wabsite &nbsp;zip</a>-->
-<!--style="margin-left:250px;"> style="margin-left:100px;"-->
+    </div>
+  </nav>
+  <section class="background">
+    <div class="serv">
+      <h1 class="title">About</h1>
+      <p class="about_text">This website is Developed by Prince</p>
+    </div>
+  </section><hr /> <hr />
+  <footer style="border-top:1px solid white">
+    <div class="condition" style="text-align: center;">
+      <a href="#" class="terms">Terms & Condition</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="#"class="terms">Cookies</a>
       <p class="bottom">Copyright&nbsp; &copy; 2023 &nbsp;Princewab.cf</p>
     </div>
-    </footer>
+  </footer>
 </body>
 </html>
