--- a/index.html
+++ b/index.html
@@ -11,41 +11,39 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
 </head>
 <body>
-     <nav class="home background hi">
-   <ul class="name" id="nav">
-    <div class="logo"><img src="Img/Prince.jpg" alt="logo img" /></div>
-  <li><a href="index.html">Home</a></li>
-  <li><a href="about.html">About</a></li>
-  <li><a href="services.html">Services</a></li>
-  <li><a href="download.html">Downlode</a></li>
-   </ul>
+  <nav class="home background hi">
+    <ul class="name" id="nav">
+      <div class="logo"><img src="Img/Prince.jpg" alt="logo img" /></div>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="download.html">Downlode</a></li>
+    </ul>
     <div class="right">
       <div class="barger" id="ber">
-          <div class="hamber"></div>
-          <div class="hamber"></div>
-          <div class="hamber"></div>
-        </div>
+        <div class="hamber"></div>
+        <div class="hamber"></div>
+        <div class="hamber"></div>
+      </div>
     </div>
-     </nav>
+  </nav>
         <section class="background" style="font-family: 'Roboto Condensed', sans-serif;">
-       <p class="title"><b>Home</b></p>
-       <div class="pp">
-        <div class="firstshalf" style=" margin-top: 90px; margin-left: 15px;">
-      <p class="font"><b>Welcome To Prince Gohel Website.</b></p>
-      <p class="fohis">This Website is developed by prince, First Log in </p><br />
-    <a href="Log in .html" class="login">&nbsp;&nbsp;log in &nbsp;</a>  
-    </div>
-    </div>
- </section>
-<footer style="border-top:1px solid #FFFFFF;">
- <div class="condition" style="text-align: center;">
-    <a href="#" class="terms">Terms & Condition</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-     <a href="#"class="terms">Cookies</a>
-<!--<a href="princewabsite.zip" class="bottom"download>download &nbsp;wabsite &nbsp;zip</a>-->
-<!--style="margin-left:250px;"> style="margin-left:100px;"-->
+          <p class="title"><b>Home</b></p>
+          <div class="pp">
+            <div class="firstshalf" style=" margin-top: 90px; margin-left: 15px;">
+              <p class="font"><b>Welcome To Prince Gohel Website.</b></p>
+              <p class="fohis">This Website is Developed by Prince, First Log in </p><br />
+              <a href="Log in .html" class="login">&nbsp;&nbsp;log in &nbsp;</a>  
+            </div>
+        </div>
+        </section>
+  <footer style="border-top:1px solid white">
+    <div class="condition" style="text-align: center;">
+      <a href="#" class="terms">Terms & Condition</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="#"class="terms">Cookies</a>
       <p class="bottom">Copyright&nbsp; &copy; 2023 &nbsp;Princewab.cf</p>
     </div>
-    </footer>
+  </footer>
   <script src="js/index.js"></script>
 </body>
 </html>
