--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
   </nav>
         <section class="background" style="font-family: 'Roboto Condensed', sans-serif;">
-          <p class="title"><b>Home</b></p>
+          <p class="title">Home</p>
           <div class="pp">
             <div class="firstshalf" style=" margin-top: 90px; margin-left: 15px;">
               <p class="font"><b>Welcome To Prince Gohel Website.</b></p>
@@ -37,12 +37,10 @@
             </div>
         </div>
         </section>
-  <footer style="border-top:1px solid white">
-    <div class="condition" style="text-align: center;">
-      <a href="#" class="terms">Terms & Condition</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="#"class="terms">Cookies</a>
-      <p class="bottom">Copyright&nbsp; &copy; 2023 &nbsp;Princewab.cf</p>
-    </div>
+  <footer class="footer">
+    <a href="#" class="terms">Terms & Condition</a>
+    <a href="#" class="terms">Cookies</a>
+    <span class="copysymbol">Copyright&nbsp;&copy;2023&nbsp;Princewab.cf</span>
   </footer>
   <script src="js/index.js"></script>
 </body>
