--- a/about.html
+++ b/about.html
@@ -28,13 +28,11 @@
       <h1 class="title">About</h1>
       <p class="about_text">This website is Developed by Prince</p>
     </div>
-  </section><hr /> <hr />
-  <footer style="border-top:1px solid white">
-    <div class="condition" style="text-align: center;">
-      <a href="#" class="terms">Terms & Condition</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="#"class="terms">Cookies</a>
-      <p class="bottom">Copyright&nbsp; &copy; 2023 &nbsp;Princewab.cf</p>
-    </div>
+  </section>
+  <footer class="footer">
+    <a href="#" class="terms">Terms & Condition</a>
+    <a href="#" class="terms">Cookies</a>
+    <span class="copysymbol">Copyright&nbsp;&copy;2023&nbsp;Princewab.cf</span>
   </footer>
 </body>
 </html>
