--- a/Log in .html
+++ b/Log in .html
@@ -29,12 +29,10 @@
     </div>
   </section>
   <hr />
-  <footer style="border-top:1px solid white">
-    <div class="condition" style="text-align: center;">
-      <a href="#" class="terms">Terms & Condition</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="#"class="terms">Cookies</a>
-      <p class="bottom">Copyright&nbsp; &copy; 2023 &nbsp;Princewab.cf</p>
-    </div>
+  <footer class="footer">
+    <a href="#" class="terms">Terms & Condition</a>
+    <a href="#" class="terms">Cookies</a>
+    <span class="copysymbol">Copyright&nbsp;&copy;2023&nbsp;Princewab.cf</span>
   </footer>
 </body>
 </html>
