--- a/download.html
+++ b/download.html
@@ -9,40 +9,32 @@
 <body>
   <nav class="home background hi">
     <ul class="name" id="nav">
-     <div class="logo"><img src="img/prince.jpg" alt="logo img" /></div>
-   <li><a href="index.html">home</a></li>
-   <li><a href="about.html">about</a></li>
-   <li><a href="services.html">services</a></li>
-   <li><a href="download.html">downlode</a></li>
+      <div class="logo"><img src="Img/Prince.jpg" alt="logo img" /></div>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="download.html">Downlode</a></li>
     </ul>
-     <div class="right">
-       <div class="barger" id="ber">
-           <div class="hamber"></div>
-           <div class="hamber"></div>
-           <div class="hamber"></div>
-         </div>
-     </div>
-      </nav>
+    <div class="right">
+      <div class="barger" id="ber">
+        <div class="hamber"></div>
+        <div class="hamber"></div>
+        <div class="hamber"></div>
+      </div>
+    </div>
+  </nav>
     <section class="background">
       <div class="serv">
         <h1 class="title">download</h1>
         <div class="about_text">
-            <p>download zip file from hear :&nbsp; <a href="other file/princewabsite.zip"download style="color: rgba(31, 31, 172, 0.63); font-weight: bold;">downlode</a></p>
+            <p>Download Zip File From Here :&nbsp; <a href="other file/princewabsite.zip"download style="color: rgba(31, 31, 172, 0.63); font-weight: bold;">downlode</a></p>
         </div>
         </div>
-        
     </section>
- <hr />
- <hr />
- <footer style="border-top:1px solid #FFFFFF;">
-  <div class="condition" style="text-align: center;">
-     <a href="#" class="terms">terms & condition</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-      <a href="#"class="terms">cookies</a>
- <!--<a href="princewabsite.zip" class="bottom"download>download &nbsp;wabsite &nbsp;zip</a>-->
- <!--style="margin-left:250px;"> style="margin-left:100px;"-->
-     <p class="bottom">copyright&nbsp; &copy; 2023 &nbsp;princewab.cf</p>
-     </div>
-     </footer>
+ <footer class="footer">
+  <a href="#" class="terms">Terms & Condition</a>
+  <a href="#" class="terms">Cookies</a>
+  <span class="copysymbol">Copyright&nbsp;&copy;2023&nbsp;Princewab.cf</span>
+</footer>
 </body>
-
 </html>
