this chand many thigs
big fix1

--- a/contact-us.html
+++ b/contact-us.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>About</title>
+    <title>Countact Us</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,13 +17,12 @@
     </ul>
   </nav>
   <section class="section-style">
-    <h2>Home</h2>
-    <p style="font-size:35px;">This Website is Developed by Prince</p> 
+    <h2>Contact Us</h2>
+    <p>Phone: +91 70431 22104</p>
+    <p>Email: princewebinfo@gmail.com</p>
   </section>
   <footer class="footer">
-    <a href="#" class="terms">Terms & Condition</a>
-    <a href="#" class="terms">Cookies</a>
-    <span class="copysymbol">Copyright&nbsp;&copy;2023&nbsp;Princewab.cf</span>
+    <p>&copy;2024&nbsp;Princewab.cf All Rights Reserved.</p>
   </footer>
 </body>
 </html>
