--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Countact Us</title>
+    <title>services</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,13 +13,12 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="services.html">Services</a></li>
-      <li><a href="Countact Us.html">Countact Us</a></li>
+      <li><a href="conutact.html">Countact Us</a></li>
     </ul>
   </nav>
   <section class="section-style">
-    <h2>Contact Us</h2>
-    <p>Phone: +91 70431 22104</p>
-    <p>Email: princewebinfo@gmail.com</p>
+    <h2>Services</h2>
+    <p style="font-size:35px;">This Website is Developed by Prince</p>
   </section>
   <footer class="footer">
     <p>&copy;2024&nbsp;Princewab.cf All Rights Reserved.</p>
