--- a/Log in .html
+++ b/Log in .html
@@ -7,32 +7,37 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <nav class="home background">
-    <ul class="name">
-      <div class="logo"><img src="Img/Prince.jpg" alt="logo img" /></div>
+  <nav class="navclss">
+    <ul id="nav">
+      <div class="logo"><img src="Img/Prince.jpg" alt="logo"/></div>
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="services.html">Services</a></li>
-      <li><a href="download.html">Downlode</a></li>
+      <li><a href="conutact.html">Countact Us</a></li>
     </ul>
   </nav>
-  <section class="background bac">
-    <div class="text-box">
-      <form action="index.html">
-        <h1 class="h1text">&nbsp;&nbsp;Log in&nbsp;&nbsp;</h1>
+  <section class="section-style">
+    <h2>Log In</h2>
+    <form action="index.html">
         <input type="text"id="username" class="log_in_text-box" placeholder="&nbsp;Enter your username"/><br /><br />
         <input type="text" id="password" class="log_in_text-box" placeholder="&nbsp;Enter your password"/><br /><br />
         <input type="submit" name="log in"value="log in" class="log-button"/><br /><br />
         <span style="font-size: 20px; color: white;">No account ?</span>
         <a href="#" class="a1-log"> Create One! </a>
-      </form>
-    </div>
+    </form>
   </section>
-  <hr />
   <footer class="footer">
-    <a href="#" class="terms">Terms & Condition</a>
-    <a href="#" class="terms">Cookies</a>
-    <span class="copysymbol">Copyright&nbsp;&copy;2023&nbsp;Princewab.cf</span>
+    <p>&copy;2024&nbsp;Princewab.cf All Rights Reserved.</p>
   </footer>
 </body>
 </html>
+
+<!-- <div class="text-box">
+  <form action="index.html">
+    <h1 class="h1text">&nbsp;&nbsp;Log in&nbsp;&nbsp;</h1>
+    <input type="text"id="username" class="log_in_text-box" placeholder="&nbsp;Enter your username"/><br /><br />
+    <input type="text" id="password" class="log_in_text-box" placeholder="&nbsp;Enter your password"/><br /><br />
+    <input type="submit" name="log in"value="log in" class="log-button"/><br /><br />
+    <span style="font-size: 20px; color: white;">No account ?</span>
+    <a href="#" class="a1-log"> Create One! </a>
+  </form> -->
