--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="services.html">Services</a></li>
-      <li><a href="Countact Us.html">Countact Us</a></li>
+      <li><a href="conutact.html">Countact Us</a></li>
     </ul>
   </nav>
   <section class="section-style">
